# Plaincraft

./: .gitignore  .gitmodules  CMakeLists.txt
Common/: CMakeLists.txt  Common.licenseheader
Common/include/: plaincraft_common.hpp
Common/include/lib/: stb_image.h
Common/src/plaincraft/common/: common.hpp  system_types.hpp  system_types_glm.hpp
Common/src/plaincraft/common/caching/: cache.hpp
Common/src/plaincraft/common/debugging/logging/: logger.cpp  logger.hpp
Common/src/plaincraft/common/events/: event_listener.hpp  event_publisher.hpp  event_subscription.hpp  event_subscription_base.hpp  event_trigger.hpp  event_trigger_base.hpp
Common/src/plaincraft/common/exceptions/: not_implemented_exception.hpp
Common/src/plaincraft/common/profiling/: profiler.cpp  profiler.hpp
Common/src/plaincraft/common/utils/: file_utils.cpp  file_utils.hpp  fixed_list.hpp  hash_utils.hpp
Core/: CMakeLists.txt
Core/include/: plaincraft_core.hpp
Core/resources/: debugfragment.shader  debugvertex.shader  fragmentshader.shader  vertexshader.shader
Core/src/plaincraft/core/: common.hpp  game.cpp  game.hpp  scene.cpp  scene.hpp
Core/src/plaincraft/core/assets/: asset.cpp  asset.hpp  assets_manager.cpp  assets_manager.hpp
Core/src/plaincraft/core/camera_operators/: camera_operator.cpp  camera_operator.hpp
Core/src/plaincraft/core/components/: component.hpp
Core/src/plaincraft/core/controllers/: camera_controller.cpp  camera_controller.hpp  entity_input_controller.cpp  entity_input_controller.hpp  in_game_menu_controller.cpp  in_game_menu_controller.hpp
Core/src/plaincraft/core/entities/: entity.cpp  entity.hpp  game_object.cpp  game_object.hpp  player.cpp  player.hpp
Core/src/plaincraft/core/events/: event.hpp  event_observer.hpp  event_trigger.hpp  event_types.hpp  events_manager.cpp  events_manager.hpp  loop_events_handler.hpp
Core/src/plaincraft/core/initialization/: scene_builder.cpp  scene_builder.hpp
Core/src/plaincraft/core/input/: input_manager.cpp  input_manager.hpp  input_stack.cpp  input_stack.hpp  input_target.cpp  input_target.hpp
Core/src/plaincraft/core/models/: models_cache.cpp  models_cache.hpp
Core/src/plaincraft/core/physics/: body.cpp  body.hpp  physics_engine.cpp  physics_engine.hpp  physics_object.cpp  physics_object.hpp
Core/src/plaincraft/core/physics_optimization/: active_objects_optimizer.cpp  active_objects_optimizer.hpp  map_optimizer.cpp  map_optimizer.hpp
Core/src/plaincraft/core/scene/: scene.cpp  scene.hpp
Core/src/plaincraft/core/state/: global_state.cpp  global_state.hpp
Core/src/plaincraft/core/utils/: conversions.cpp  conversions.hpp  fps_counter.cpp  fps_counter.hpp
Core/src/plaincraft/core/world/: world_generator.cpp  world_generator.hpp  world_optimizer.cpp  world_optimizer.hpp  world_updater.cpp  world_updater.hpp
Dear_ImGui/: CMakeLists.txt
ImGui/: CMakeLists.txt
RenderEngine/: CMakeLists.txt
RenderEngine/include/: plaincraft_render_engine.hpp
RenderEngine/src/plaincraft/render_engine/: common.hpp  frame_config.hpp  render_engine.cpp  render_engine.hpp
RenderEngine/src/plaincraft/render_engine/camera/: camera.cpp  camera.hpp
RenderEngine/src/plaincraft/render_engine/events/: window_events_handler.cpp  window_events_handler.hpp
RenderEngine/src/plaincraft/render_engine/gui/: gui_renderer.cpp  gui_renderer.hpp  gui_widget.cpp  gui_widget.hpp
RenderEngine/src/plaincraft/render_engine/models/: model.cpp  model.hpp  models_cache.cpp  models_cache.hpp  models_factory.cpp  models_factory.hpp
RenderEngine/src/plaincraft/render_engine/renderer/: drawable.cpp  drawable.hpp  model.cpp  model.hpp  mvp_matrix.hpp  renderer.cpp  renderer.hpp  vertex.cpp  vertex.hpp
RenderEngine/src/plaincraft/render_engine/scene/: drawable.cpp  drawable.hpp  mvp_matrix.hpp  scene_renderer.cpp  scene_renderer.hpp  vertex.cpp
RenderEngine/src/plaincraft/render_engine/scene_rendering/: drawable.hpp  scene_renderer.hpp  vertex.hpp
RenderEngine/src/plaincraft/render_engine/shader/: shader.cpp  shader.hpp  shaders_repository.cpp  shaders_repository.hpp
RenderEngine/src/plaincraft/render_engine/texture/: texture.hpp  textures_factory.hpp  textures_repository.cpp  textures_repository.hpp
RenderEngine/src/plaincraft/render_engine/window/: window.cpp  window.hpp
RenderEngine_OpenGL/: CMakeLists.txt
RenderEngine_OpenGL/include/: plaincraft_render_engine_opengl.hpp
RenderEngine_OpenGL/src/plaincraft/render_engine_opengl/: common.hpp  opengl_render_engine.cpp  opengl_render_engine.hpp
RenderEngine_OpenGL/src/plaincraft/render_engine_opengl/renderer/: opengl_renderer.cpp  opengl_renderer.hpp
RenderEngine_OpenGL/src/plaincraft/render_engine_opengl/scene_rendering/: opengl_scene_renderer.hpp
RenderEngine_OpenGL/src/plaincraft/render_engine_opengl/shader/: opengl_shader.cpp  opengl_shader.hpp
RenderEngine_OpenGL/src/plaincraft/render_engine_opengl/texture/: opengl_texture.cpp  opengl_texture.hpp  opengl_textures_factory.cpp  opengl_textures_factory.hpp
RenderEngine_OpenGL/src/plaincraft/render_engine_opengl/window/: opengl_window.cpp  opengl_window.hpp
RenderEngine_Vulkan/: CMakeLists.txt
RenderEngine_Vulkan/include/: plaincraft_render_engine_vulkan.hpp
RenderEngine_Vulkan/src/plaincraft/render_engine_vulkan/: common.hpp  queue_family_indices.hpp  swap_chain_support_details.hpp  vulkan_render_engine.cpp  vulkan_render_engine.hpp  vulkan_renderer_frame_config.hpp
RenderEngine_Vulkan/src/plaincraft/render_engine_vulkan/descriptors/: vulkan_descriptor_pool.cpp  vulkan_descriptor_pool.hpp  vulkan_descriptor_set_layout.cpp  vulkan_descriptor_set_layout.hpp  vulkan_descriptor_writer.cpp  vulkan_descriptor_writer.hpp
RenderEngine_Vulkan/src/plaincraft/render_engine_vulkan/device/: vulkan_device.cpp  vulkan_device.hpp
RenderEngine_Vulkan/src/plaincraft/render_engine_vulkan/gui/: vulkan_gui_context.cpp  vulkan_gui_context.hpp  vulkan_gui_renderer.cpp  vulkan_gui_renderer.hpp
Runner/: CMakeLists.txt
Runner/src/runner/: main.cpp
Runner/src/runner/input/: key_mapping_controller.cpp  key_mapping_controller.hpp
(+183 files in other folders)
